# MoneyGuard

./: .gcloudignore  Dockerfile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 37f277560330_create_initial_database_structure.py  57c528b7ece8_add_security_code_field_to_users_table.py  5cccf3a4b881_add_email_confirmed_field.py  6e5c86e8275f_edit_profile_picture_field_to_allow_.py  7e171eba4463_rename_description_field_to_category.py  800a00510e4c_add_expiredtoken_table.py  8644bf1ecb08_add_cascade_delete_to_necessary_.py  8dbc521004e8_add_security_code_verified_field_to_.py  90c6288ea8d4_add_user_id_column_to_transactions_table.py  a6387226399c_edit_logo_path_name_and_default_value_.py  b3ef94d9cbdc_add_customization_user_fields.py  b4512e2c7c55_add_cvv_and_expiration_date_fields_to_.py  d3940e3a77a3_add_gender_field_to_user.py  f0ddbd49ae3e_create_security_code_sessions_table.py
backend/app/: custom_types.py  database.py  main.py  settings.py  utils.py
backend/app/models/: __init__.py  account.py  base.py  expired_token.py  mixins.py  security_code_session.py  transaction.py  user.py
backend/app/oauth2/: login_form.py  oauth2.py
backend/app/routers/: account.py  auth.py  security.py  security_code_session.py  transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  security_code_session.py  token.py  transaction.py  user.py
backend/app/smtp/: __init__.py  email_handling.py  templates.py
backend/app/utils/: __init__.py  change_ratio.py  hash.py  profile_picture.py  security_code.py
(+2 files in other folders)
