[tool.poetry]
name = "moneyguard"
version = "0.1.0"
description = ""
authors = ["Dmytro Shyrokov <shyrokov.dmytro@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.4"}
black = "^24.10.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.32.0"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
